--- a/index.html
+++ b/index.html
@@ -122,12 +122,20 @@
         .news-image {
             width: 100%;
             height: 200px;
-            object-fit: cover;
             background: #e2e8f0;
             display: flex;
             align-items: center;
             justify-content: center;
             color: #64748b;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .news-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
         }
 
         .news-content {
