--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <script src="/js/demographics.js"></script>
     <script src="/js/personalization.js"></script>  
-    <script src="/js/news.js"></script>
+    <script src="/js/news-manager.js"></script>
     <script src="/js/app.js"></script>
 </body>
 </html>
