--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
                         <button class="filter-btn" data-filter="location" data-value="other">Other ▼</button>
                     </div>
                 </div>
+
+                <div class="filter-group">
+                    <span class="filter-label">Race:</span>
+                    <div class="filter-buttons">
+                        <button class="filter-btn active" data-filter="race" data-value="white">White</button>
+                        <button class="filter-btn" data-filter="race" data-value="black">Black</button>
+                        <button class="filter-btn" data-filter="race" data-value="hispanic">Hispanic</button>
+                        <button class="filter-btn" data-filter="race" data-value="asian">Asian</button>
+                        <button class="filter-btn" data-filter="race" data-value="other">Other</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -62,7 +73,7 @@
         <div class="container">
             <div class="view-toggle">
                 <span class="toggle-label">Viewing impact for:</span>
-                <span id="current-demo">Millennial • $30-60K • Renter • Virginia</span>
+                <span id="current-demo">Millennial • $30-60K • Renter • Virginia • White</span>
                 <button class="compare-btn" onclick="toggleCompareMode()">Compare Demographics</button>
             </div>
 
