--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="filter-group">
                     <span class="filter-label">Age:</span>
                     <div class="filter-buttons">
-                        <button class="filter-btn active" data-filter="age" data-value="millennial">Millennial</button>
+                        <button class="filter-btn active" data-filter="age" data-value="millennial">Millennials</button>
                         <button class="filter-btn" data-filter="age" data-value="genz">Gen Z</button>
                         <button class="filter-btn" data-filter="age" data-value="genx">Gen X</button>
                         <button class="filter-btn" data-filter="age" data-value="boomer">Boomer</button>
