--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">HDTA.me</div>
-            <div class="tagline">How Does This Affect Me?2</div>
+            <div class="tagline">How Does This Affect Me?</div>
         </div>
     </header>
 
