--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </header>
 
-    <section class="demographics-bar" style="display: none;">
+    <section class="demographics-bar">
         <div class="container">
             <div class="demo-filters">
                 <div class="filter-group">
@@ -59,15 +59,63 @@
 
                 <div class="filter-group">
                     <span class="filter-label">Location:</span>
-                    <div class="filter-buttons">
-                        <button class="filter-btn active" data-filter="location" data-value="virginia">Virginia</button>
-                        <button class="filter-btn" data-filter="location" data-value="california">California</button>
-                        <button class="filter-btn" data-filter="location" data-value="texas">Texas</button>
-                        <button class="filter-btn" data-filter="location" data-value="florida">Florida</button>
-                        <button class="filter-btn" data-filter="location" data-value="other">Other</button>
-                    </div>
-                    <input type="text" id="zipcode-input" placeholder="Zip (optional)" 
-                           style="margin-left: 0.5rem; padding: 0.375rem; border: 1px solid #d1d5db; border-radius: 0.375rem; font-size: 0.875rem; width: 80px;">
+                    <select id="location-select" data-filter="location" 
+                            style="margin-right: 0.5rem; padding: 0.375rem; border: 1px solid #d1d5db; border-radius: 0.375rem; font-size: 0.875rem; background: white;">
+                        <option value="alabama">Alabama</option>
+                        <option value="alaska">Alaska</option>
+                        <option value="arizona">Arizona</option>
+                        <option value="arkansas">Arkansas</option>
+                        <option value="california">California</option>
+                        <option value="colorado">Colorado</option>
+                        <option value="connecticut">Connecticut</option>
+                        <option value="delaware">Delaware</option>
+                        <option value="florida">Florida</option>
+                        <option value="georgia">Georgia</option>
+                        <option value="hawaii">Hawaii</option>
+                        <option value="idaho">Idaho</option>
+                        <option value="illinois">Illinois</option>
+                        <option value="indiana">Indiana</option>
+                        <option value="iowa">Iowa</option>
+                        <option value="kansas">Kansas</option>
+                        <option value="kentucky">Kentucky</option>
+                        <option value="louisiana">Louisiana</option>
+                        <option value="maine">Maine</option>
+                        <option value="maryland">Maryland</option>
+                        <option value="massachusetts">Massachusetts</option>
+                        <option value="michigan">Michigan</option>
+                        <option value="minnesota">Minnesota</option>
+                        <option value="mississippi">Mississippi</option>
+                        <option value="missouri">Missouri</option>
+                        <option value="montana">Montana</option>
+                        <option value="nebraska">Nebraska</option>
+                        <option value="nevada">Nevada</option>
+                        <option value="newhampshire">New Hampshire</option>
+                        <option value="newjersey">New Jersey</option>
+                        <option value="newmexico">New Mexico</option>
+                        <option value="newyork">New York</option>
+                        <option value="northcarolina">North Carolina</option>
+                        <option value="northdakota">North Dakota</option>
+                        <option value="ohio">Ohio</option>
+                        <option value="oklahoma">Oklahoma</option>
+                        <option value="oregon">Oregon</option>
+                        <option value="pennsylvania">Pennsylvania</option>
+                        <option value="rhodeisland">Rhode Island</option>
+                        <option value="southcarolina">South Carolina</option>
+                        <option value="southdakota">South Dakota</option>
+                        <option value="tennessee">Tennessee</option>
+                        <option value="texas">Texas</option>
+                        <option value="utah">Utah</option>
+                        <option value="vermont">Vermont</option>
+                        <option value="virginia" selected>Virginia</option>
+                        <option value="washington">Washington</option>
+                        <option value="westvirginia">West Virginia</option>
+                        <option value="wisconsin">Wisconsin</option>
+                        <option value="wyoming">Wyoming</option>
+                        <option value="dc">Washington DC</option>
+                        <option value="international">International</option>
+                    </select>
+                    <input type="text" id="zipcode-input" placeholder="Zip" 
+                           style="padding: 0.375rem; border: 1px solid #d1d5db; border-radius: 0.375rem; font-size: 0.875rem; width: 60px;">
                 </div>
 
                 <div class="filter-group">
@@ -81,6 +129,12 @@
                     </div>
                 </div>
             </div>
+            
+            <!-- Simple toggle notch -->
+            <div class="demographics-toggle" onclick="toggleDemographics()" 
+                 style="text-align: center; padding: 0.5rem; cursor: pointer; color: #64748b; font-size: 0.875rem;">
+                ▲ Hide
+            </div>
         </div>
     </section>
 
@@ -89,7 +143,11 @@
             <div class="view-toggle">
                 <span class="toggle-label">Viewing impact for:</span>
                 <span id="current-demo">Millennial • $30-60K • Renter • Virginia • White</span>
-                <button class="compare-btn" onclick="toggleDemographics()">Customize Profile</button>
+            </div>
+
+            <!-- Add show button when hidden -->
+            <div class="demographics-show" onclick="toggleDemographics()" style="display: none; text-align: center; padding: 1rem; cursor: pointer; color: #64748b; font-size: 0.875rem; border: 1px solid #e2e8f0; border-radius: 0.5rem; margin-bottom: 1rem;">
+                ▼ Customize Profile
             </div>
 
             <div class="news-grid" id="news-grid">
@@ -110,14 +168,15 @@
     <script>
     function toggleDemographics() {
         const demoBar = document.querySelector('.demographics-bar');
-        const button = event.target;
+        const showButton = document.querySelector('.demographics-show');
+        const toggleNotch = document.querySelector('.demographics-toggle');
         
         if (demoBar.style.display === 'none') {
             demoBar.style.display = 'block';
-            button.textContent = 'Hide Profile';
+            showButton.style.display = 'none';
         } else {
             demoBar.style.display = 'none';
-            button.textContent = 'Customize Profile';
+            showButton.style.display = 'block';
         }
     }
     </script>
