--- a/index.html
+++ b/index.html
@@ -140,14 +140,9 @@
 
     <main class="main-content">
         <div class="container">
-            <div class="view-toggle">
-                <span class="toggle-label">Viewing impact for:</span>
-                <span id="current-demo">Millennial • $30-60K • Renter • Virginia • White</span>
-            </div>
-
             <!-- Add show button when hidden -->
             <div class="demographics-show" onclick="toggleDemographics()" style="display: none; text-align: center; padding: 1rem; cursor: pointer; color: #64748b; font-size: 0.875rem; border: 1px solid #e2e8f0; border-radius: 0.5rem; margin-bottom: 1rem;">
-                ▼ Customize Profile
+                ▼ Show
             </div>
 
             <div class="news-grid" id="news-grid">
