--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="filter-group">
                     <span class="filter-label">Location:</span>
                     <select id="location-select" data-filter="location" 
-                            style="margin-right: 0.5rem; padding: 0.375rem; border: 1px solid #d1d5db; border-radius: 0.375rem; font-size: 0.875rem; background: white;">
+                            style="padding: 0.375rem; border: 1px solid #d1d5db; border-radius: 0.375rem; font-size: 0.875rem; background: white;">
                         <option value="alabama">Alabama</option>
                         <option value="alaska">Alaska</option>
                         <option value="arizona">Arizona</option>
@@ -95,8 +95,6 @@
                         <option value="dc">Washington DC</option>
                         <option value="international">International</option>
                     </select>
-                    <input type="text" id="zipcode-input" placeholder="Zip" 
-                           style="padding: 0.375rem; border: 1px solid #d1d5db; border-radius: 0.375rem; font-size: 0.875rem; width: 60px;">
                 </div>
             </div>
             
