--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
                 <div class="filter-group">
                     <span class="filter-label">Income:</span>
                     <div class="filter-buttons">
-                        <button class="filter-btn active" data-filter="income" data-value="30-60k">$30-60K</button>
+                        <button class="filter-btn active" data-filter="income" data-value="30-60k">$30K-$60K</button>
                         <button class="filter-btn" data-filter="income" data-value="under30k">Under $30K</button>
-                        <button class="filter-btn" data-filter="income" data-value="60-100k">$60-100K</button>
-                        <button class="filter-btn" data-filter="income" data-value="100k+">$100K+</button>
+                        <button class="filter-btn" data-filter="income" data-value="60-100k">$60K-$100K</button>
+                        <button class="filter-btn" data-filter="income" data-value="100k-1m">$100K-$1M</button>
+                        <button class="filter-btn" data-filter="income" data-value="over1m">Over $1M</button>
                     </div>
                 </div>
 
