--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     <header class="header">
         <div class="container" id="container">
             <div class="logo">HDTA.me</div>
-            <div class="tagline">Cut through the spin. See who really wins and loses.</div>
+            <div class="tagline">Cut through the spin. See who really wins and loses from policy changes.</div>
         </div>
     </header>
 
