--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@
             margin-bottom: 1rem;
             font-size: 0.95rem;
             line-height: 1.5;
+            height: 4.5em;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
         }
 
         .analyze-btn {
