--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
             box-shadow: 0 2px 8px rgba(0,0,0,0.08);
             overflow: hidden;
             transition: all 0.3s ease;
-            height: fit-content;
+            height: 520px;
+            display: flex;
+            flex-direction: column;
             position: relative;
         }
 
@@ -155,6 +157,11 @@
             color: #1e293b;
             line-height: 1.4;
             cursor: pointer;
+            height: 3.15em;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
         }
 
         .news-title:hover {
