--- a/index.html
+++ b/index.html
@@ -500,30 +500,17 @@
     </style>
 </head>
 <body>
-    <header class="header">
+   <header class="header">
         <div class="container">
             <h1 class="logo">How Does This Affect Me?</h1>
-            <p class="tagline">The daily newsletter that cuts through policy spin</p>
-            <div class="edition-info" id="edition-info">Loading today's edition...</div>
+            <div class="edition-info" id="edition-info">Thursday, August 7, 2025</div>
         </div>
     </header>
-
-    <section class="newsletter-signup">
-        <div class="signup-content">
-            <h2 class="signup-title">Get Daily Policy Analysis</h2>
-            <p class="signup-description">Skip the spin. Get the real impact of policy changes delivered every morning at 7 AM.</p>
-            <form class="signup-form" onsubmit="handleNewsletterSignup(event)">
-                <input type="email" class="email-input" placeholder="Enter your email" required>
-                <button type="submit" class="signup-btn">Subscribe Free</button>
-            </form>
-            <p class="signup-note">Join 2,847 readers getting daily analysis. Unsubscribe anytime.</p>
-        </div>
-    </section>
 
     <main class="main-content">
         <div class="container">
             <h2 class="page-title">Today's Policy Analysis</h2>
-            <p class="page-subtitle">What really happens when policies change</p>
+            <p class="page-subtitle">Real impact, no spin</p>
 
             <div class="loading-state" id="loading">
                 <div class="loading-spinner"></div>
