--- a/index.html
+++ b/index.html
@@ -503,19 +503,12 @@
    <header class="header">
         <div class="container">
             <h1 class="logo">How Does This Affect Me?</h1>
-            <div class="edition-info" id="edition-info">Thursday, August 7, 2025</div>
+            <div class="edition-info" id="edition-info">Thursday, August 7, 2025 • Issue #1</div>
         </div>
     </header>
 
     <main class="main-content">
         <div class="container">
-            <h2 class="page-title">Today's Policy Analysis</h2>
-            <p class="page-subtitle">Real impact, no spin</p>
-
-            <div class="loading-state" id="loading">
-                <div class="loading-spinner"></div>
-                Loading today's analysis...
-            </div>
 
             <div class="articles-list" id="articles-container" style="display: none;">
                 <!-- Articles will be loaded here -->
